--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,14 @@
 <resources>
-    <string name="app_name">bagian iqbal</string>
+    <string name="app_name">Home</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_about_us">About us</string>
+    <string name="title_activity_feedback">Feedback</string>
+    <string name="title_activity_petunjuk_penggunaan">Petunjuk Penggunaan</string>
+    <string name="title_activity_notlpdarurat">Nomor Telepon Darurat</string>
+    <string name="title_activity_lapor">Lapor</string>
 </resources>
