--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="title_activity_lapor">Lapor</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Lapor</string>
 </resources>
